--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -19,7 +19,7 @@
         app:layout_constraintVertical_bias="0.746" />
 
     <EditText
-        android:id="@+id/editTextUsername"
+        android:id="@+id/editTextUsernameOnLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
