--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -6,15 +6,15 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_items"
-            android:icon="@drawable/ic_message_24"
+            android:icon="@drawable/ic_item"
             android:title="Item" />
         <item
             android:id="@+id/nav_login"
-            android:icon="@drawable/ic_profile"
+            android:icon="@drawable/ic_login"
             android:title="Login" />
         <item
             android:id="@+id/nav_register"
-            android:icon="@drawable/ic_register"
+            android:icon="@drawable/ic_register2"
             android:title="Register" />
     </group>
 
