--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -6,12 +6,22 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_items"
-            android:icon="@drawable/ic_item"
+            android:icon="@drawable/ic_items"
             android:title="Item" />
         <item
             android:id="@+id/nav_login"
             android:icon="@drawable/ic_login"
             android:title="Login" />
+
+        <item
+            android:id="@+id/nav_additem"
+            android:icon="@drawable/ic_additem"
+            android:title="Add Item" />
+
+        <item
+            android:id="@+id/nav_logout"
+            android:icon="@drawable/ic_logout"
+            android:title="Logout" />
         <item
             android:id="@+id/nav_register"
             android:icon="@drawable/ic_register2"
