--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -7,7 +7,8 @@
         <item
             android:id="@+id/nav_items"
             android:icon="@drawable/ic_items"
-            android:title="Item" />
+            android:title="Items" />
+
         <item
             android:id="@+id/nav_login"
             android:icon="@drawable/ic_login"
